--- a/Source/NHS.Staffing.DataEntry.Portal/Web.config
+++ b/Source/NHS.Staffing.DataEntry.Portal/Web.config
@@ -1,12 +1,13 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
 	<connectionStrings>
-		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
-	</connectionStrings>
+  <add name="ApplicationServices" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=NHSOperationsDatabase;Persist Security Info=True;User ID=sa;Password=1qaz2wsx@"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.0"/>
 		<authentication mode="Forms">
