--- a/Source/NHS.Staffing.DataEntry.Portal/Web.config
+++ b/Source/NHS.Staffing.DataEntry.Portal/Web.config
@@ -5,13 +5,15 @@
   -->
 <configuration>
 	<connectionStrings>
-  <add name="ApplicationServices" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=NHSOperationsDatabase;Persist Security Info=True;User ID=sa;Password=1qaz2wsx@"
+  <!--<add name="ApplicationServices" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=NHSOperationsDatabase;Persist Security Info=True;User ID=sa;Password=1qaz2wsx@"-->
+    <add name="ApplicationServices" connectionString="workstation id=NHSOperationsDatabase.mssql.somee.com;packet size=4096;user id=brianperera_SQLLogin_1;pwd=rke6aoqf8d;data source=NHSOperationsDatabase.mssql.somee.com;persist security info=False;initial catalog=NHSOperationsDatabase"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.0"/>
+    <customErrors mode="Off"/>
 		<authentication mode="Forms">
-			<forms loginUrl="~/Account/Login.aspx" timeout="2880"/>
+			<forms loginUrl="~/Login.aspx" protection="All" timeout="30"/>
 		</authentication>
 		<membership>
 			<providers>
@@ -25,15 +27,22 @@
 				<add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/"/>
 			</providers>
 		</profile>
-		<roleManager enabled="false">
-			<providers>
-				<clear/>
-				<add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/"/>
-				<add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/"/>
-			</providers>
-		</roleManager>
+		<roleManager enabled="true">
+   <providers>
+    <clear />
+    <add connectionStringName="ApplicationServices" applicationName="/"
+     name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" />
+    <add applicationName="/" name="AspNetWindowsTokenRoleProvider"
+     type="System.Web.Security.WindowsTokenRoleProvider" />
+   </providers>
+  </roleManager>
 	</system.web>
 	<system.webServer>
 		<modules runAllManagedModulesForAllRequests="true"/>
+    <defaultDocument>
+      <files>
+        <add value="Login.aspx" />
+      </files>
+    </defaultDocument>
 	</system.webServer>
 </configuration>
