Check-in the latest changes

--- a/Source/NHS.Staffing.DataEntry.Portal/Web.config
+++ b/Source/NHS.Staffing.DataEntry.Portal/Web.config
@@ -5,9 +5,8 @@
   -->
 <configuration>
 	<connectionStrings>
-  <!--<add name="ApplicationServices" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=NHSOperationsDatabase;Persist Security Info=True;User ID=sa;Password=1qaz2wsx@"-->
-    <add name="ApplicationServices" connectionString="workstation id=NHSOperationsDatabase.mssql.somee.com;packet size=4096;user id=brianperera_SQLLogin_1;pwd=rke6aoqf8d;data source=NHSOperationsDatabase.mssql.somee.com;persist security info=False;initial catalog=NHSOperationsDatabase"
-   providerName="System.Data.SqlClient" />
+  <add name="ApplicationServices" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=NHSOperationsDatabase;Persist Security Info=True;User ID=sa;Password=1qaz2wsx@" providerName="System.Data.SqlClient" />
+    <!--<add name="ApplicationServices" connectionString="workstation id=NHSOperationsDatabase.mssql.somee.com;packet size=4096;user id=brianperera_SQLLogin_1;pwd=rke6aoqf8d;data source=NHSOperationsDatabase.mssql.somee.com;persist security info=False;initial catalog=NHSOperationsDatabase" providerName="System.Data.SqlClient" />-->
  </connectionStrings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.0"/>
