--- a/Source/NHS.Staffing.DataEntry.Portal/Administration/Web.config
+++ b/Source/NHS.Staffing.DataEntry.Portal/Administration/Web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <configuration>
 
-  <location path="Register.aspx">
+  <location path="UserAccount.aspx">
     <system.web>
       <authorization>
         <allow users="*"/>
