Adding changes to admin pages

--- a/Source/NHS.Staffing.DataEntry.Portal/web.config
+++ b/Source/NHS.Staffing.DataEntry.Portal/web.config
@@ -21,7 +21,7 @@
   <authorization>
    <allow users="?" />
   </authorization>
-  <compilation debug="true" targetFramework="4.0"/>
+    <compilation debug="true" targetFramework="4.0"/>
     <customErrors mode="Off"/>
 		<authentication mode="Forms">
 			<forms loginUrl="~/Login.aspx" protection="All" timeout="30" cookieless="UseCookies" path="/" requireSSL="false" slidingExpiration="true"/>
@@ -32,7 +32,12 @@
 				<add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/"/>
 			</providers>
 		</membership>
-		<profile>
+		<profile enabled="true">
+      <properties>
+        <add name="FirstName" type="string"/>
+        <add name="LastName" type="string"/>
+        <add name="Phone" type="string"/>
+      </properties>
 			<providers>
 				<clear/>
 				<add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/"/>
