--- a/Source/NHS.Staffing.DataEntry.Portal/web.config
+++ b/Source/NHS.Staffing.DataEntry.Portal/web.config
@@ -60,5 +60,6 @@
         <add value="Login.aspx" />
       </files>
     </defaultDocument>
-	</system.webServer> 
+	</system.webServer>
+  <appSettings configSource="appSettings.config"  />
 </configuration>
