Changed datatime format

--- a/Source/NHS.Staffing.DataEntry.Portal/web.config
+++ b/Source/NHS.Staffing.DataEntry.Portal/web.config
@@ -9,7 +9,7 @@
     <!--<add name="ApplicationServices" connectionString="workstation id=NHSOperationsDatabase.mssql.somee.com;packet size=4096;user id=brianperera_SQLLogin_1;pwd=rke6aoqf8d;data source=NHSOperationsDatabase.mssql.somee.com;persist security info=False;initial catalog=NHSOperationsDatabase" providerName="System.Data.SqlClient" />-->
  </connectionStrings>
 	<system.web>
-    <globalization uiCulture="en" culture="en-US" />
+    <globalization uiCulture="en" culture="en-GB" />
     <siteMap defaultProvider="XmlSiteMapProvider" enabled="true">
       <providers>
         <add name="XmlSiteMapProvider"
