Check-in latest code changes

--- a/Source/NHS.Staffing.DataEntry.Portal/appSettings.config
+++ b/Source/NHS.Staffing.DataEntry.Portal/appSettings.config
@@ -5,6 +5,6 @@
   -->
   <appSettings>
     <!-- Use pipe caracter as seperater -->
-    <add key="SafeMitigationActions" value="Safe Action 1|Safe Action 2|Safe Action 3"/>
-    <add key="UnsafeSafeMitigationActions" value="UnSafe Action 1|UnSafe Action 2|UnSafe Action 3"/>
+    <add key="SafeMitigationActions" value="Cross cover with division|Cross cover out of division|Reduced beds|Reduced acuity|Current staff given extra hours|Cancelled training or courses|Specialist nurses pulled in"/>
+    <add key="UnsafeSafeMitigationActions" value="Out to additional agency|Closed beds|Reviewed activity"/>
   </appSettings>
