--- a/Source/NHS.Staffing.DataEntry.Portal/appSettings.config
+++ b/Source/NHS.Staffing.DataEntry.Portal/appSettings.config
@@ -7,4 +7,5 @@
     <!-- Use pipe caracter as seperater -->
     <add key="SafeMitigationActions" value="Cross cover with division|Cross cover out of division|Reduced beds|Reduced acuity|Current staff given extra hours|Cancelled training or courses|Specialist nurses pulled in"/>
     <add key="UnsafeSafeMitigationActions" value="Out to additional agency|Closed beds|Reviewed activity"/>
+    <add key="DateTimeFormat" value="{0:dd/MM/yyyy}"/>
   </appSettings>
