--- a/Source/NHS.Staffing.DataEntry.Portal/appSettings.config
+++ b/Source/NHS.Staffing.DataEntry.Portal/appSettings.config
@@ -8,4 +8,5 @@
     <add key="SafeMitigationActions" value="Cross cover with division|Cross cover out of division|Reduced beds|Reduced acuity|Current staff given extra hours|Cancelled training or courses|Specialist nurses pulled in"/>
     <add key="UnsafeSafeMitigationActions" value="Out to additional agency|Closed beds|Reviewed activity"/>
     <add key="DateTimeFormat" value="{0:dd/MM/yyyy}"/>
+    <add key="DropDownDefaultText" value="Please select from the list"/>
   </appSettings>
