--- a/Source/NHS.Staffing.DataEntry.Portal/appSettings.config
+++ b/Source/NHS.Staffing.DataEntry.Portal/appSettings.config
@@ -9,4 +9,5 @@
     <add key="UnsafeSafeMitigationActions" value="Out to additional agency|Closed beds|Reviewed activity"/>
     <add key="DateTimeFormat" value="{0:dd/MM/yyyy}"/>
     <add key="DropDownDefaultText" value="Please select from the list"/>
+    <add key="DropDownAllText" value="All"/>
   </appSettings>
