Fix bugs related to CR
* Done - was the ward at minimum safe staffing 3 <= 2 + 2 + 0 -> Green

* Done - Popup add RN and HCA column names

* Done - Popup needs a cancel button (submin buttonm, cancel button)

* Done - Late night drop down no popup

* Done - Compare HCA value with minimum safe staffing
popup, Staffing level has not met the minimum safe staffing requirements. 
(Warning sign)

* Done - Need the warning message on the risk yes popup also.

--- a/Source/NHS.Staffing.DataEntry.Portal/web.config
+++ b/Source/NHS.Staffing.DataEntry.Portal/web.config
@@ -23,7 +23,10 @@
    <allow users="?" />
   </authorization>
     <compilation debug="true" targetFramework="4.0"/>
-    <customErrors mode="Off"/>
+    <customErrors defaultRedirect="Error.aspx" mode="Off">
+      <error statusCode="404" redirect="ErrorPages/Error.aspx?status=404" />
+      <error statusCode="500" redirect="ErrorPages/Error.aspx?status=500" />
+    </customErrors>
 		<authentication mode="Forms">
 			<forms loginUrl="~/Login.aspx" protection="All" timeout="30" cookieless="UseCookies" path="/" requireSSL="false" slidingExpiration="true"/>
 		</authentication>
